idea/testData/multiplatform/jvmInlineValueClass/jvm/jvm.kt
package kotlin.jvm

annotation class JvmInline

@JvmInline
actual value class <!LINE_MARKER("descr='Has declaration in common module'")!>VC<!>(val i: Int)